[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["jaykayudo <jaykayudo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
django = "2.2.2"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
dj-database-url = "0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
